--- a/.htaccess
+++ b/.htaccess
@@ -19,25 +19,25 @@
 </IfModule>
 
 ## Uncomment these rules if you want to have nice URLs using
-## $conf['userewrite'] = 1 - not needed for rewrite mode 2
-#RewriteEngine on
-#
-#RewriteRule ^_media/(.*)              lib/exe/fetch.php?media=$1  [QSA,L]
-#RewriteRule ^_detail/(.*)             lib/exe/detail.php?media=$1  [QSA,L]
-#RewriteRule ^_export/([^/]+)/(.*)     doku.php?do=export_$1&id=$2  [QSA,L]
-#RewriteRule ^$                        doku.php  [L]
-#RewriteCond %{REQUEST_FILENAME}       !-f
-#RewriteCond %{REQUEST_FILENAME}       !-d
-#RewriteRule (.*)                      doku.php?id=$1  [QSA,L]
-#RewriteRule ^index.php$               doku.php
-#
+$conf['userewrite'] = 1 - not needed for rewrite mode 2
+RewriteEngine on
+
+RewriteRule ^_media/(.*)              lib/exe/fetch.php?media=$1  [QSA,L]
+RewriteRule ^_detail/(.*)             lib/exe/detail.php?media=$1  [QSA,L]
+RewriteRule ^_export/([^/]+)/(.*)     doku.php?do=export_$1&id=$2  [QSA,L]
+RewriteRule ^$                        doku.php  [L]
+RewriteCond %{REQUEST_FILENAME}       !-f
+RewriteCond %{REQUEST_FILENAME}       !-d
+RewriteRule (.*)                      doku.php?id=$1  [QSA,L]
+RewriteRule ^index.php$               doku.php
+
 ## Not all installations will require the following line.  If you do,
 ## change "/dokuwiki" to the path to your dokuwiki directory relative
 ## to your document root.
-#RewriteBase /dokuwiki
+RewriteBase /dokuwiki
 #
 ## If you enable DokuWikis XML-RPC interface, you should consider to
 ## restrict access to it over HTTPS only! Uncomment the following two
 ## rules if your server setup allows HTTPS.
-#RewriteCond %{HTTPS} !=on
-#RewriteRule ^lib/exe/xmlrpc.php$      https://%{SERVER_NAME}%{REQUEST_URI} [L,R=301]
+RewriteCond %{HTTPS} !=on
+RewriteRule ^lib/exe/xmlrpc.php$      https://%{SERVER_NAME}%{REQUEST_URI} [L,R=301]
